[package]
authors = ["Sojan James <sojan.james@gmail.com>"]
edition = "2018"
name = "someip"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
someip_parse = "0.2.0"
thiserror = "1.0.24"
# Pull in the tokio framework
tokio = {version = "1.4.0", features = ["full"]}
# Using this to make the tokio codec
async-trait = "0.1.31"
futures = "0.3.15"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = {version = "1.0", features = ["derive"]}
tokio-util = {version = "0.6.5", features = ["codec", "net"]}

[dev-dependencies]
simplelog = "0.10.0"
