[package]
authors = ["Sojan James <sojan.james@gmail.com>"]
edition = "2018"
name = "someip"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
bytes = "1.0.1"
someip_parse = "0.2.0"
thiserror = "1.0.24"
tokio = {version = "1.4.0", features = ["full"]}
async-trait = "0.1.31"
bitvec = "0.21.2"
futures = "0.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
serde = {version = "1.0", features = ["derive"]}
tokio-util = {version = "0.6.5", features = ["codec", "net", "time"]}
async-std = "1.9.0"

[dev-dependencies]
async-std = "1.9.0"
async-trait = "0.1.51"
bincode = "1.3"
someip_derive = {path = "generator_macros"}
simplelog = "0.10.0"
