[package]
authors = ["Sojan James <sojan.james@gmail.com>"]
description = "SOME/IP Service and Client implementation"
edition = "2018"
homepage = "https://github.com/sjames/someip"
license-file = "LICENSE"
name = "someip"
version = "0.1.1"

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.31"
bincode = "1.3"
bitvec = "1.0.1"
bytes = "1.0.1"
futures = "0.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
serde = {version = "1.0", features = ["derive"]}
someip_parse = "0.2.0"
thiserror = "1.0.24"
tokio = {version = "1.20", features = ["full"]}
tokio-util = {version = "0.6.5", features = ["codec", "net", "time"]}

[dev-dependencies]
async-std = "1.9.0"
async-trait = "0.1.51"
bincode = "1.3"
simplelog = "0.10.0"
someip_derive = {path = "generator_macros"}
