[package]
authors = ["Sojan James <sojan.james@gmail.com>"]
description = "SOME/IP derive macros for traits"
edition = "2018"
name = "someip_derive"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-syn-parse = "0.1.5"
proc-macro2 = "1.0.27"
quote = "1.0"
syn = {version = "1.0", features = ["full", "extra-traits"]}

[lib]
proc-macro = true
