[package]
edition = "2018"
name = "hello_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
someip = {path = "../../"}
bincode = "1.3"
byteorder = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"

