[package]
edition = "2018"
name = "hello_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
someip = {path = "../../"}
bincode = "1.3"
byteorder = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"
generator_macros = {path = "../../generator_macros"}
thiserror = "1.0.25"
tokio = {version = "1.4.0", features = ["full"]}
async-trait = "0.1.31"
futures = "0.3.15"
simplelog = "0.10.0"
log = "0.4.14"
async-std = "1.9.0"



[lib]
proc-macro = true